--- a/Générateur PU.html
+++ b/Générateur PU.html
@@ -319,7 +319,7 @@
             <button class="back-button" onclick="goBack(9)">Retour</button>
         </div>
         <h3>Besoin de fausses dents ?</h3>
-        <div class="step-description" id="step10-description">Description de l'étape 10</div>
+        <div class="step-description" id="step10-description">Pensez à préciser en désignation si l'écart entre les fausse dents n'est pas équidistant</div>
         <div class="button-container">
             <button onclick="validateFalseTeeth('')" style="width: 200px;">Sans</button>
         </div>
