--- a/Générateur PU.html
+++ b/Générateur PU.html
@@ -218,9 +218,9 @@
             <h4>PVC et PU</h4>
             <div class="buttons-container">
                 <button class="category-image-button" onclick="selectFinalOption('PUR70', 'PU Transparent 70', '70 Sh', 'Transparent')" data-title="Dureté: 70 Sh; Couleur: Transparent" onmouseover="showTooltip(this)" onmouseout="hideTooltip()">
-                    <img src="images/PUR70.jpg" alt="PU Transparent 70">PU Transparent 70</button>
+                    <img src="images/PUR70.jpg" alt="PU Transparent 70Sh">PU Transparent 70</button>
                 <button class="category-image-button" onclick="selectFinalOption('PUR85', 'PU Transparent 85', '85 Sh', 'Transparent')" data-title="Dureté: 85 Sh; Couleur: Transparent" onmouseover="showTooltip(this)" onmouseout="hideTooltip()">
-                    <img src="images/PUR85.jpg" alt="PU Transparent 85">PU Transparent 85</button>
+                    <img src="images/PUR85.jpg" alt="PU Transparent 85Sh">PU Transparent 85</button>
                 <button class="category-image-button" onclick="selectFinalOption('FBPU', 'Fishbone PU', '70 Sh', 'Transparent')" data-title="Dureté: 70 Sh; Couleur: Transparent" onmouseover="showTooltip(this)" onmouseout="hideTooltip()">
                     <img src="images/FBPU.jpg" alt="Fishbone PU">Fishbone PU</button>
                 <button class="category-image-button" onclick="selectFinalOption('FBPVC', 'Fishbone PVC', '65 Sh', 'Blanc')" data-title="Dureté: 65 Sh; Couleur: Blanc" onmouseover="showTooltip(this)" onmouseout="hideTooltip()">
