--- a/Générateur PU.html
+++ b/Générateur PU.html
@@ -16,7 +16,7 @@
         <em>Mode sombre</em>
     </div>
 
-    <h1>Générateur de code article</h1>
+    <h1>Configurateur de courroie polyuréthane</h1>
     <!-- Barre de progression -->
     <div id="progressBar">
         <div id="progress"></div>
@@ -149,7 +149,7 @@
             <button class="back-button" onclick="goBack(5)">Retour</button>
         </div>
         <h3>Besoin d'un revêtement en tissu ?</h3>
-        <div class="step-description" id="step7-description"></div>
+        <div class="step-description" id="step7-description">Une surcouche polyamide permet un meilleur engagement de la dent et une réduction du bruit</div>
         <div class="button-container">
             <button onclick="selectOptionalOption('', 'Sans')" style="width: 200px;">Sans</button>
         </div>
