--- a/Générateur PU.html
+++ b/Générateur PU.html
@@ -390,6 +390,17 @@
                     </div>
                 </div>
             </div>
+            
+            <!-- Add the price result card -->
+            <div class="compact-results-container">
+                <div id="priceResult" class="result-card">
+                    <div class="result-content">Prix estimé : <strong>En attente...</strong></div>
+                    <div class="copy-icon">
+                        <i class="fas fa-copy"></i>
+                        <span class="copy-tooltip">Copier</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
