--- a/Générateur PU.html
+++ b/Générateur PU.html
@@ -383,7 +383,7 @@
                 </div>
                 
                 <div id="alternativeCodeStock" class="result-card">
-                    <div class="result-content">Alternative : <strong>En attente...</strong></div>
+                    <div class="result-content">Stock pour MOQ : <strong>En attente...</strong></div>
                     <div class="copy-icon">
                         <i class="fas fa-copy"></i>
                         <span class="copy-tooltip">Copier</span>
@@ -400,10 +400,17 @@
                         <span class="copy-tooltip">Copier</span>
                     </div>
                 </div>
+
+                <div id="alternativePriceResult" class="result-card">
+                    <div class="result-content">Prix avec MOQ : <strong>En attente...</strong></div>
+                    <div class="copy-icon">
+                        <i class="fas fa-copy"></i>
+                        <span class="copy-tooltip">Copier</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
     <!-- Important: Chargez le script JavaScript à la fin du body pour s'assurer que tous les éléments sont chargés -->
     <script src="script.js"></script>
 </body>
